--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@astrojs/mdx": "^4.3.5",
     "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.13.7",
     "tailwindcss": "^3.4.17"
   }
