feat: improved experience on mdesktop and mobile

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Base site settings
-SITE_URL=https://blog.chatollama.com
+SITE_URL=https://blog.chatollama.cloud
 # Set to true to enable draft previews in dev
 ENABLE_DRAFTS=false
